tests/cases_invalid/items/.expected
error: undefined item
 --> ./cases_invalid/items/buffer_expr_var_missing_source.shd:1:14
  |
1 | buf buffer = missing;
  |              ^^^^^^^
  |              |
  |              `missing` variable is undefined
  |

error: `buffer1` variable defined multiple times
 --> ./cases_invalid/items/buffer_not_unique.shd:3:1
  |
1 | buf buffer1 = 0;
  | ---------------- info: same item defined here
2 | buf buffer2 = 0;
3 | buf buffer1 = 0;
  | ^^^^^^^^^^^^^^^^
  | |
  | duplicated item
  |

error: function parameter defined multiple times
 --> ./cases_invalid/items/function_definition.shd:1:42
  |
1 | fn duplicated_param_name(a: u32, b: u32, a: i32) {
  |                          ------          ^^^^^^
  |                          |               |
  |                          |               duplicated parameter name
  |                          info: same parameter name defined here
  |

error: `func(u32, i32)` function defined multiple times
 --> ./cases_invalid/items/function_not_unique.shd:5:1
  |
1 | fn func(a: u32, b: i32) {}
  | -------------------------- info: same item defined here
2 | fn func(a: u32, b: bool) {}
3 | fn func(a: u32) {}
4 | fn other_name(a: u32, b: i32) {}
5 | fn func(a: u32, b: i32) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | duplicated item
  |

error: item definition with circular dependency
 --> ./cases_invalid/items/recursion.shd:1:1
  |
1 | buf buffer = f();
  | ^^^^^^^^^^^^^^^^^
  | |
  | this item is directly or indirectly referring to itself
  |

error: item definition with circular dependency
 --> ./cases_invalid/items/recursion.shd:3:1
  |
3 | / fn f() -> i32 {
4 | |     return buffer;
5 | | }
  | |_^
  |   |
  |   this item is directly or indirectly referring to itself
  |

error: item definition with circular dependency
 --> ./cases_invalid/items/recursion.shd:7:1
  |
7 | buf buffer1 = buffer2;
  | ^^^^^^^^^^^^^^^^^^^^^^
  | |
  | this item is directly or indirectly referring to itself
  |

error: item definition with circular dependency
 --> ./cases_invalid/items/recursion.shd:8:1
  |
8 | buf buffer2 = buffer3;
  | ^^^^^^^^^^^^^^^^^^^^^^
  | |
  | this item is directly or indirectly referring to itself
  |

error: item definition with circular dependency
 --> ./cases_invalid/items/recursion.shd:9:1
  |
9 | buf buffer3 = buffer1;
  | ^^^^^^^^^^^^^^^^^^^^^^
  | |
  | this item is directly or indirectly referring to itself
  |

error: item definition with circular dependency
  --> ./cases_invalid/items/recursion.shd:11:1
   |
11 | / fn f1() {
12 | |     f2();
13 | | }
   | |_^
   |   |
   |   this item is directly or indirectly referring to itself
   |

error: item definition with circular dependency
  --> ./cases_invalid/items/recursion.shd:15:1
   |
15 | / fn f2() {
16 | |     f3();
17 | | }
   | |_^
   |   |
   |   this item is directly or indirectly referring to itself
   |

error: item definition with circular dependency
  --> ./cases_invalid/items/recursion.shd:19:1
   |
19 | / fn f3() {
20 | |     f1();
21 | | }
   | |_^
   |   |
   |   this item is directly or indirectly referring to itself
   |